crates/jsonschema-codegen/tests/ui/invalid_additional_items_type.stderr
error: 1 is not of types "boolean", "object"
 --> tests/ui/invalid_additional_items_type.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"items":[{}],"additionalItems":1}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
